examples/type_system/failing/129_orphan_constructor_pattern_statement.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/129_orphan_constructor_pattern_statement.flx
// error[E034]: Unexpected Token
//
// `Some(...)` looks like a pattern but appears outside `match`.
//
//   examples/type_system/failing/129_orphan_constructor_pattern_statement.flx:20:1
//    |
// 20 | Some(x);
//    | ^^^^^^^
//
// Hint:
//   Did you mean `match value { Some(x) -> ... }`?
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

Some(x);
let after = 1
